# data-viz-assignment2

./: bar_chart.json  donut_chart.json  heatmap.json  index.html  newmap.json  report - data viz 2.docx
EmailSystem/: CMakeLists.txt  Email.cpp  Email.h  EmailManager.cpp  EmailManager.h  EmailSystem  Map.cpp  Queue.cpp  Queue.h  Stack.h  User.cpp  User.h  Utility.cpp  Utility.h  carla.jones_inbox.txt  global.txt  jane.smith_inbox.txt  john.doe_inbox.txt  main.cpp  mark.wilson_inbox.txt
EmailSystem/EmailSystem.dSYM/Contents/: Info.plist
EmailSystem/EmailSystem.dSYM/Contents/Resources/DWARF/: EmailSystem
EmailSystem/EmailSystem.dSYM/Contents/Resources/Relocations/aarch64/: EmailSystem.yml
